--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -111,8 +111,8 @@ jobs:
             sudo docker container rm -f ${{ secrets.CONTAINER_NAME }} || true &&
             sudo docker image rm -f ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} || true &&
             sudo docker run --name ${{ secrets.CONTAINER_NAME }} -d \
-              '-e JDBC_DATABASE_URL=${{ secrets.JDBC_DATABASE_URL }}' \
-              '-e JDBC_DATABASE_USERNAME=${{ secrets.JDBC_DATABASE_USERNAME }}' \
-              '-e JDBC_DATABASE_PASSWORD=${{ secrets.JDBC_DATABASE_PASSWORD }}' \
+              -e SPRING_DATASOURCE_URL=${{ secrets.JDBC_DATABASE_URL }} \
+              -e SPRING_DATASOURCE_USERNAME=${{ secrets.JDBC_DATABASE_USERNAME }} \
+              -e SPRING_DATASOURCE_PASSWORD=${{ secrets.JDBC_DATABASE_PASSWORD }} \
               -p 80:8080 \
               ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }}"
