--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -107,12 +107,6 @@ jobs:
         run: chmod 400 ssh-key.pem
       - name: Deploy to GCP
         run: |
-          ssh -o StrictHostKeyChecking=no -i ssh-key.pem ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_STATIC_IP }} "
-            sudo docker container rm -f ${{ secrets.CONTAINER_NAME }} || true &&
-            sudo docker image rm -f ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} || true &&
-            sudo docker run --name ${{ secrets.CONTAINER_NAME }} -d \
-              -e SPRING_DATASOURCE_URL=${{ secrets.JDBC_DATABASE_URL }} \
-              -e SPRING_DATASOURCE_USERNAME=${{ secrets.JDBC_DATABASE_USERNAME }} \
-              -e SPRING_DATASOURCE_PASSWORD=${{ secrets.JDBC_DATABASE_PASSWORD }} \
-              -p 80:8080 \
-              ${{ secrets.REGISTRY_USER }}/${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }}"
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_STATIC_IP }} "
+            cd /path/to/your/application &&
+            sudo docker-compose up -d"
