fix: add test db

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -60,9 +60,10 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Test with Gradle
         env:
-          JDBC_DATABASE_URL: ${{ secrets.JDBC_DATABASE_URL }}
-          JDBC_DATABASE_USERNAME: ${{ secrets.JDBC_DATABASE_USERNAME }}
-          JDBC_DATABASE_PASSWORD: ${{ secrets.JDBC_DATABASE_PASSWORD }}
+          PRODUCTION: test
+          JDBC_DATABASE_URL: ${{ secrets.JDBC_DATABASE_URL_TEST }}
+          JDBC_DATABASE_USERNAME: ${{ secrets.JDBC_DATABASE_USERNAME_TEST }}
+          JDBC_DATABASE_PASSWORD: ${{ secrets.JDBC_DATABASE_PASSWORD_TEST }}
         run: |
           ./gradlew check --info --stacktrace
           ./gradlew test
