--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build and analyze
         env:
           PRODUCTION: test
-          JDBC_DATABASE_URL: ${{ env.JDBC_DATABASE_URL_TEST }}
+          JDBC_DATABASE_URL: ${{ secrets.JDBC_DATABASE_URL }}
           JDBC_DATABASE_USERNAME: ${{ secrets.JDBC_DATABASE_USERNAME_TEST }}
           JDBC_DATABASE_PASSWORD: ${{ secrets.JDBC_DATABASE_PASSWORD_TEST }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
