--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${JDBC_DATABASE_URL_TEST}
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME_TEST}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD_TEST}
 spring.jpa.hibernate.ddl-auto=create
