--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -31,12 +31,10 @@ jobs:
       - name: Build and analyze
         env:
           PRODUCTION: test
-          JDBC_DATABASE_URL: ${{ secrets.JDBC_DATABASE_URL }}
-          JDBC_DATABASE_USERNAME: ${{ secrets.JDBC_DATABASE_USERNAME_TEST }}
-          JDBC_DATABASE_PASSWORD: ${{ secrets.JDBC_DATABASE_PASSWORD_TEST }}
+          JDBC_DATABASE_URL_TEST: ${{ secrets.JDBC_DATABASE_URL_TEST }}
+          JDBC_DATABASE_USERNAME_TEST: ${{ secrets.JDBC_DATABASE_USERNAME_TEST }}
+          JDBC_DATABASE_PASSWORD_TEST: ${{ secrets.JDBC_DATABASE_PASSWORD_TEST }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
-        run: |
-          echo "JDBC_DATABASE_URL: $JDBC_DATABASE_URL"
-          ./gradlew build sonar --info --scan
+        run: ./gradlew build sonar --info --scan
